# bricklab

./: .gitignore  README.md
backend/app/: main.py
backend/app/routers/: generate.py
backend/app/services/: image3d_service.py
bricklab-backend/: pyproject.toml
bricklab-backend/app/: main.py
bricklab-backend/app/routers/: __init__.py  generate.py  image3d.py  metrics.py  session.py
bricklab-backend/app/services/: brickgpt_service.py  image3d_service.py
bricklab-backend/tests/: tests.py
bricklab-frontend/: brick.3dm  brick.3dm.rhl  package-lock.json  package.json  vitest.config.mts
bricklab-frontend/app/: globals.css  layout.tsx  page.tsx
bricklab-frontend/components/: BrickPreview.tsx  ConstraintBuilder.tsx  Docs.tsx  Exporter.tsx  GenerationReplay.tsx  Generator.tsx  Importer.tsx  Library.tsx  ParametricBrick.tsx
bricklab-frontend/components/layout/: LeftSidebar.tsx  RightSidebar.tsx  ToolBar.tsx  TopNav.tsx
bricklab-frontend/components/panels/: AssetsPanel.tsx  (+5 more)
bricklab-frontend/lib/: brickLibrary.ts  prefixEditing.ts  text3dApi.ts
bricklab-frontend/public/: brick.glb
bricklab-frontend/store/: sceneStore.tsx  usePrefixEdit.tsx
bricklab-frontend/tests/: tests.ts
frontend/: components.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConstraintBuilder.tsx  Docs.tsx  Exporter.tsx  GenerationReplay.tsx  Generator.tsx  Library.tsx
frontend/lib/: brickLibrary.ts  image3dApi.ts  prefixEditing.ts
frontend/public/: brick.glb
frontend/store/: sceneStore.tsx  usePrefixEdit.tsx
(+21 files in other folders)
