[project]
name = "bricklab-backend"
version = "0.1.0"
description = "BrickLab FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",  # file uploads (mesh/image)
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
serve = "app.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest", "httpx"]  # httpx needed for FastAPI TestClient
